--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -1,7 +1,13 @@
-doctype html
-html(lang="ko")
-    head
-        title Wetube
-    body
-        h1 Watch Video!
-    include partials/footer.pug
+extends base
+
+block content
+    // h3 #{video.title} 
+    // h5 #{video.views} #{video.views === 1 ? "view" : "views"} 
+    // 영어 단수, 복수 구분할 때 써야하므로 기억해야 한다.
+    div
+        p=video.description
+        small=video.createdAt
+    a(href=`${video.id}/edit`) Edit Video &rarr;
+    br
+    a(href=`${video.id}/delete`) Delete Video &rarr;
+
