--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -8,14 +8,23 @@ html(lang="ko")
             h1=pageTitle 
             nav 
                 ul 
-                    li 
-                        a(href="/videos/upload") Upload Video
                     li
                         a(href="/") Home
+                    if loggedIn  
+                        li  
+                            a(href="/users/logout") Log Out
+                        li 
+                            a(href="/my-profile") #{loggedInUser.name}의 Profile
+                    else 
+                        li 
+                            a(href="/login") Login             
+                        li 
+                            a(href="/join") Join
+
                     li
-                        a(href="/search") Search  
-                    li 
-                        a(href="/join") Join
+                        a(href="/search") Search
+                    li
+                        a(href="/videos/upload") Upload Video  
         main 
             block content
         include partials/footer
