finish how to make webpack!
2022-08-12

--- a/src/views/base.pug
+++ b/src/views/base.pug
@@ -32,3 +32,5 @@ html(lang="ko")
         main 
             block content
         include partials/footer
+        script(src="/static/js/main.js")
+        //이렇게 하면 모든(현재)pug 파일들이 못생긴 javascript에 접근 할 수 있다.
