--- a/src/views/edit.pug
+++ b/src/views/edit.pug
@@ -2,9 +2,11 @@ extends base.pug
 
 
 block content
-    h4 Update Video
-    form(method="POST")
-        input(name= "title", placeholder="Video Title", value="pageTitle", maxlength=80, required)
-        input(placeholder="Description", required, type="text", name="description", minlength=20, value=video.description)
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=video.hashtags.join())
-        input(value="Save", type="submit")
+    div
+        
+        form(method="POST")
+            h4.edit__h4 Update Video
+            input(name= "title", placeholder="Video Title", value="pageTitle", maxlength=80, required)
+            input(placeholder="Description", required, type="text", name="description", minlength=20, value=video.description)
+            input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags", value=video.hashtags.join())
+            input(value="Save", type="submit")
