--- a/src/views/join.pug
+++ b/src/views/join.pug
@@ -11,7 +11,7 @@ block content
         input(placeholder="Name" name="name", type="text", required )
         input(placeholder="Location" name="location", type="text", required )
         input(placeholder="Submit" type="submit", value="join")
-        hr
-        div 
-            span Already Have you account?
-            a(href="/login") Log in now &rarr;
+        include partials/social-login.pug
+    div.auth-switch
+        span Already Have you account? | 
+        a(href="/login") Log in now &rarr;
