--- a/src/views/users/profile.pug
+++ b/src/views/users/profile.pug
@@ -1,8 +1,12 @@
 extends ../base
 include ../mixins/video
 
-block content 
-    each video in user.videos
-        +video(video)
-    else 
-        li Sorry Nothing found.
+block content
+    div.profile__data
+        img(src="/" + user.avatarURL).avatar
+        h3=user.name
+    div.video-grid
+        each video in user.videos
+            +video(video)
+        else 
+           span.empty__message No videos Find
