finish video transcode process
2022-08-26

--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -19,6 +19,7 @@
 @import "./screens/profile.scss";
 @import "./screens/edit-profile.scss";
 @import "./screens/edit.scss";
+@import "./screens/upload.scss";
 //default
 a {
   color: inherit;
