--- a/src/client/scss/components/forms.scss
+++ b/src/client/scss/components/forms.scss
@@ -8,6 +8,40 @@ form {
 }
 input[type="submit"],
 .social__btn {
+  background-color: white !important;
+  color: rgba($color: $red, $alpha: 1) !important;
+  text-align: center !important;
+  border-radius: 5px;
+  display: block;
+  padding: 10px 20px;
+  font-weight: 600;
+  margin-top: 10px;
+  width: 100%;
+  cursor: pointer;
+  border: none;
+  &:focus {
+    outline: none;
+  }
+  &:disabled {
+    opacity: 0.5;
+    pointer-events: none;
+  }
+}
+input:not(input[type="range"], input[type="submit"]) {
+  all: unset;
+  margin-bottom: 5px;
+  background-color: black;
+  color: white;
+  padding: 12px 20px;
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+  width: 90%;
+  &::placeholder {
+    color: rgba(255, 255, 255, 0.349);
+  }
+}
+#actionBtn {
   background-color: rgba($color: $red, $alpha: 0.878);
   border-radius: 5px;
   display: block;
@@ -15,21 +49,7 @@ input[type="submit"],
   text-align: center;
   font-weight: 600;
   margin-top: 10px;
-  width: 100%;
+  width: 50%;
   cursor: pointer;
   color: #cccccc;
-}
-input:not(input[type="range"], input[type="submit"]) {
-  all: unset;
-  margin-bottom: 5px;
-  background-color: #121212;
-  padding: 12px 20px;
-  border-radius: 5px;
-  border: solid 1px rgba(255, 255, 255, 0.2);
-  font-size: 16px;
-  color: #cccccc;
-  width: 90%;
-  &::placeholder {
-    color: rgba(255, 255, 255, 0.62);
-  }
 }
