--- a/src/views/upload.pug
+++ b/src/views/upload.pug
@@ -1,13 +1,22 @@
 extends base.pug
 
 block content
-    if errorMessage
-        span=errorMessage
-    form(method="POST", enctype="multipart/form-data")
-        //multer를 사용해서 file을 upload하고 싶다면, enctype를 쓰는 것을 잊지 말자!
-        label(for="video") Video File
-        input(type="file", accept="video/*", required, id="video", name="video")
-        input(placeholder="Title", required, type="text", name="title", maxlength=80)
-        input(placeholder="Description", required, type="text", name="description", minlength=20)
-        input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
-        input(type="submit", value="Upload Video") 
+    div.upload__container
+        div.upload__video
+            video#preview 
+            button#actionBtn.social__btn Start Recording
+        if errorMessage
+            span=errorMessage
+        form(method="POST", enctype="multipart/form-data")
+            //multer를 사용해서 file을 upload하고 싶다면, enctype를 쓰는 것을 잊지 말자!
+            label(for="video") Video File
+            input(type="file", accept="video/*", required, id="video", name="video")
+            label(for="thumb") Thumbnail File
+            input(type="file", accept="image/*", required, id="thumb", name="thumb")
+            input(placeholder="Title", required, type="text", name="title", maxlength=80)
+            input(placeholder="Description", required, type="text", name="description", minlength=20)
+            input(placeholder="Hashtags, separated by comma.", required, type="text", name="hashtags")
+            input(type="submit", value="Upload Video") 
+
+block scripts 
+    script(src="/static/js/recorder.js") 
