--- a/src/client/scss/styles.scss
+++ b/src/client/scss/styles.scss
@@ -20,6 +20,7 @@
 @import "./screens/edit-profile.scss";
 @import "./screens/edit.scss";
 @import "./screens/upload.scss";
+@import "./screens/watch.scss";
 //default
 a {
   color: inherit;
@@ -38,5 +39,34 @@ main {
   max-width: 1350px;
   width: 100%;
   margin: 0 auto;
+}
+
+@keyframes goAway {
+  from {
+    transform: none;
+    opacity: 1;
+  }
+  to {
+    transform: translateY(-50px);
+    opacity: 0;
+  }
+}
+
+.message {
+  position: absolute;
+  top: 10px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  max-width: 200px;
+  padding: 10px 20px;
+  border-radius: 10000px;
+  text-align: center;
+  animation: goAway 0.5s ease-in-out forwards;
+  animation-delay: 5s;
+  &.error {
+    background-color: tomato;
+    color: white;
+  }
 }
 //일단 이 코드를 우리가 알고있는 css로 변환시키는 법부터 배워봅시다!
