--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -25,13 +25,11 @@ block content
     // h5 #{video.views} #{video.views === 1 ? "view" : "views"} 
     // 영어 단수, 복수 구분할 때 써야하므로 기억해야 한다.
 
-    div
-        p=video.description
-        small=video.createdAt
-        br
-    div 
-        small Upload by
+    div.video__data
+        p.video__title=video.title
+        small.video__owner Uploaded by 
             a(href=`/users/${video.owner._id}`)=video.owner.name
+        small.video__createdAt=new Date(video.createdAt).toLocaleDateString("ko-kr", {weekday: 'long', year: 'numeric', month: 'long', day: 'numeric'})
     if String(video.owner._id) === String(loggedInUser._id)
     
         a(href=`${video.id}/edit`) Edit Video &rarr;
@@ -40,6 +38,18 @@ block content
     //그런데, 이건 html에 코멘트 내용으로 보이게 되는데, 그렇게 하지 않기 위해서는
     //-이것을 쓰면 html에 comment로도 안보이는 pug만의 기록물로 남게 된다.
 
+    if loggedIn
+        div.video__add-comments
+            form.video__comment-form#commentForm
+                textarea(cols="30", rows="10", placeholder="Write Comments")
+                button Add Comment 
+    div.video__comments
+        ul  
+            each comment in video.comments.reverse()
+                li.video__comment
+                    i.fas.fa-comment
+                        span #{comment.text}
 block scripts 
     script(src="/static/js/videoPlayer.js")
+    script(src="/static/js/commentSection.js")
     //(-->를 이어받아서) 이렇게 하면, static를 이용해 assets폴더에 들어가서 그 안의 js폴더 안에 있는 videoPlayer.js를 쓸 수 있도록 한다.
