--- a/src/views/watch.pug
+++ b/src/views/watch.pug
@@ -48,7 +48,7 @@ block content
             each comment in video.comments.reverse()
                 li.video__comment
                     i.fas.fa-comment
-                        span #{comment.text}
+                        span=#{comment.text}
 block scripts 
     script(src="/static/js/videoPlayer.js")
     script(src="/static/js/commentSection.js")
